SET(CMAKE_VERBOSE_MAKEFILE OFF)

PROJECT(tissue_recognition)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE(GetGitRevisionDescription)
get_git_head_revision(GIT_REFSPEC GIT_SHA1)
IF(GIT_SHA1 STREQUAL "GITDIR-NOTFOUND")
  MESSAGE(STATUS "This is not a build from a git clone.")
  SET(GIT_DESCRIPTION "Not compiled from a git repository.")
  SET(GIT_BRANCH "release")
ELSE()
  git_describe(GIT_DESCRIPTION)
  git_branch(GIT_BRANCH)
ENDIF()

SET(CMAKE_CXX_STANDARD 11)
IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
ENDIF()

ADD_SUBDIRECTORY(src)
